--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -312,8 +312,8 @@ image::kaibindiagrams/tagPredicateClassDiagram.png[]
 
 * The set of tags that is stored in `StudyBuddyItemContainsTagPredicate` refers to the tags specified by the user.
 
+.Code Snippet of `StudyBuddyItemContainsTagPredicate#test()`
 image::kaibindiagrams/tagPredicateCodeSnippet.png[]
-_Diagram 7 : Code Snippet of `StudyBuddyItemContainsTagPredicate#test()`_
 
 * The current implementation is that test() only returns true if *all* tags specified by the user matches the current Item.
 * As such, there will be more correctness when auto-generating cheatsheets and filtering flashcards, as seen in the following example.
@@ -331,7 +331,7 @@ that might have tags containing [difficult].
 *** The user is able to specify a tag name to get a list view of all the items with that specified tag in the mode they are currently in (e.g. `filter tag/cs2100`).
 ** Searching using Tags globally
 *** The user is also able to indicate a tag name get a list view of all the StudyBuddyItems across all 3 modes in StudyBuddyPro (e.g. `filterall tag/ma1521`).
-*** The user can also call the global command, `taglist` to get a listview of all tags in StudyBuddyPRo.
+*** The user can also call the global command, `taglist` to get a listview of all tags in StudyBuddyPro.
 ** Currently, the user is able to specify multiple tags in his/her query (e.g. `filter tag/cs2100 tag/difficult`).
 ** If multiple tags are specified, only items that match all the specified tags will be listed.
 ** The sequence diagram below shows how listing all items across StudyBuddyPro by a specified tag works.
@@ -495,12 +495,12 @@ The following _figure_ shows a class diagram of the relevant classes of the time
 +
 image::jrImages/TimeTrialClassDiagram.png[]
 
-a.	Given below is an example usage scenario and how the time trial mechanism behaves at each step.
-b. Upon initialization of the StudyBuddy and switching to the Flashcard window, the `StudyBuddyProParser`’s function
+b.	Given below is an example usage scenario and how the time trial mechanism behaves at each step.
+c. Upon initialization of the StudyBuddy and switching to the Flashcard window, the `StudyBuddyProParser`’s function
 enum will be set to parse `Flashcard` commands.
-c.	The user executes (timetrial cs2100), and the `StartTimeTrialCommand` retrieves a List of flashcards with the
+d.	The user executes (timetrial cs2100), and the `StartTimeTrialCommand` retrieves a List of flashcards with the
 associated `Tag` through the `Model#getTaggedFlashcards`, which is then passed into the `FlashcardTabWindowController`.
-d.	The `FlashcardTabWindowController` then calls the `FlashcardTabWindowController#startTimeTrial`, which in turns
+e.	The `FlashcardTabWindowController` then calls the `FlashcardTabWindowController#startTimeTrial`, which in turns
 construct a `Timeline` with the following added for 3 flashcards:
 
 1.	A `KeyFrame` to call the `FlashcardTabWindowController#loadTimeTrial` method, which displays the question of the flashcard on the window, with a `KeyValue` that starts the timer on the screen.
@@ -1268,31 +1268,13 @@ _{More to be added}_
 Windows, Linux, Unix, OS-X
 
 [[flash-card]] FlashCard::
-A titled digital 'card' that contains a question (image or text), answer, as well as it's relevant tags.
+A titled digital 'card' that contains a question (image or text), answer, as well as its relevant tags.
 
 [[cheat-sheet]] Cheatsheet::
 A document that contains the notes the user has specified during creation
 
 [[time-trial]] Time-Trial::
 A mode of answering flashcards in which you must provide the answer within a designated time period.
-
-
-[appendix]
-== Product Survey
-
-*Product Name*
-
-Author: ...
-
-Pros:
-
-* ...
-* ...
-
-Cons:
-
-* ...
-* ...
 
 [appendix]
 == Instructions for Manual Testing
